2013-01-26 - v0.2.0 - taurus
	* Импорт/экспорт из/в буфер обмена
	* Улучшен дизайн диалога создания ключей
	* Испровлена кодировка информации


2013-01-25 - v0.1.6 - taurus
	* Максимальная длина ключа в диалоге создания ключей зависит от его типа


2013-01-24 - v0.1.5 - taurus
	* Добавлены двоеточия в диалоге создания новой пары ключей


2013-01-24 - v0.1.4 - taurus
	* Улучшен внешний вид диалога генерации ключей


2013-01-23 - v0.1.3 - taurus
	* Исправлено окно Export теперь, Save вместо Open


2013-01-23 - v0.1.2 - taurus
	* Исправлены отображение русских символов


2013-01-23 - v0.1.1 - taurus
	* Исправлен алгоритм поиска gpg бинарника


2013-01-21 - v0.1.0 - taurus
	* GnuPG плагин предназначен для работы с ключами.
	  Первая версия содержит основной набор функций.
	  Позволяет генерировать ключи, удалять,
	  экспортировать и импортировать.