@@ -1,3 +1,9 @@
+2013-02-27 - v0.2.1 - taurus
+	* Добавлена информация о плагине
+	* Исправлен алгоритм поиска gpg
+	* Кнопка "Инфо" выводит сообщение о невозможности запустить gpg
+	* Плагин переименован в GnuPG Key Manager (thx nsof)
+
 2013-01-26 - v0.2.0 - taurus
 	* Импорт/экспорт из/в буфер обмена
 	* Улучшен дизайн диалога создания ключей
